# ssh-remote-control

./: .copilot-context.md  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup-dev.bat  setup-dev.sh  ssh-remote-control.code-workspace
.github/workflows/: ci-cd.yml
src/ssh_remote_control/: __init__.py  cli.py  config.py  logging_config.py  server.py  web_server.py  yaml_compat.py
static/: app.js  style.css
templates/: dashboard.html  dashboard_enhanced.html  server_detail.html  server_detail_enhanced.html
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_server.py  test_web_server.py
